[package]
name = "cargo-hermes"
edition = "2024"
version = "0.1.0-alpha.5"
description = "Formally verify that your safety comments are correct."
categories = [
  "development-tools::cargo-plugins",
  "development-tools::testing",
  "compilers",
  "mathematics",
  "security",
]
keywords = [
  "verification",
  "cargo",
  "plugin",
  "unsafe",
  "lean",
]
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
license = "BSD-2-Clause OR Apache-2.0 OR MIT"
repository = "https://github.com/google/zerocopy/tree/hermes/tools/hermes"
publish = true

exclude = [".*", "testdata"]

[dependencies]
anyhow = "1.0.101"
cargo_metadata = "0.23.1"
clap = { version = "4.5.57", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["cargo_metadata"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
log = "0.4.29"
miette = { version = "7.6.0", features = ["derive", "fancy"] }
proc-macro2 = { version = "1.0.105", features = ["span-locations"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.114", features = ["full", "visit", "extra-traits", "parsing", "printing"] }
quote = "1.0"
thiserror = "2.0.18"
walkdir = "2.5.0"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
console = "0.16.2"
sha2 = "0.10"
fs2 = "0.4"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
dirs = "6.0"
tar = "0.4"
flate2 = "1.0"

[build-dependencies]
toml = "0.8"

[dev-dependencies]
syn = { version = "2.0.114", features = ["printing", "full", "visit", "extra-traits", "parsing"] }
proc-macro2 = { version = "1.0.105", features = ["span-locations"] }
ui_test = "0.30.4"
assert_cmd = "2.1.2"
tempfile = "3.24.0"
predicates = "3.1.3"
tiny_http = "0.12"
datatest-stable = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
which = "6.0"
regex.workspace = true
strip-ansi-escapes = "0.2.1"
similar = "2.7.0"

[package.metadata.build-rs]

# The commit hash of the Aeneas repository to use.
#
# FIXME: Add a CI step to verify that this commit exists and matches the
# toolchain version.
aeneas_rev = "6b88581f6fb40a9c6a40cb09ded0b55b1775284b"

# The Lean toolchain version to use. This must match the version of Lean used
# by Aeneas in the `lean-toolchain` file in the commit above.
lean_toolchain = "leanprover/lean4:v4.28.0-rc1"

# The expected Charon version.
#
# This is used by `src/charon.rs` to enforce that the runtime `charon` binary
# matches the version expected by Hermes. This ensures compatibility with the
# generated LLBC format.
#
# FIXME(https://github.com/AeneasVerif/charon/issues/1029): Check Charon commit
# ID once that's supported
#
# FIXME(https://github.com/AeneasVerif/aeneas/issues/783): Check Aeneas
# version/commit ID once that's supported
charon_version = "0.1.174"

[package.metadata.hermes.dependencies.aeneas]
# The per-commit release tag from AeneasVerif/charon
tag = "build-2026.03.20.194505-6b88581f6fb40a9c6a40cb09ded0b55b1775284b"

[package.metadata.hermes.dependencies.aeneas.checksums]
linux-x86_64 = "c8ce5cf902ebf0358f3ee7c518e062f4992127d357bf838fa1a3d0f261da66fa"
linux-x86_64-aeneas = "1ed68728e18299ba961bc76c0c4897e582fdcfe30ec9b01919e250dc3cb6e65d"
linux-x86_64-charon = "bcdc1ef536f863f21367973bd639e5557d36872cd9135d4b13ff84c2bc6df836"
linux-x86_64-charon-driver = "20379b2051dd51dbea8d720e4041d55afe9241b95ab911e3b06492110450ecd0"
macos-aarch64 = "aa9f71adb71f7c0a86a25b5f2c05fd46f64ff576468243917452b831c9763681"
macos-aarch64-aeneas = "5743db0c6d5b3b72ebc672be2e358ab034c320cf277d045a71cf445eac771fd4"
macos-aarch64-charon = "6510ace82180cd78875b0631638a200d8e55bc9090c9372ea1dc8eb08511b6fb"
macos-aarch64-charon-driver = "3c11fcb6c5cd65cd14d9747c7f8ddd1522b608a1e79041c907cb79d3118054b2"
macos-x86_64 = "7d135616abb8933fe87f5a80c8a68945f34263b5c94925850a986ebe21f29266"
macos-x86_64-aeneas = "0228df207609fab73959f9d1ed90cf8ac00e5f19f8dbf1ca46d7573885baa617"
macos-x86_64-charon = "926c5ff8495c19b7a6f3aff1a3861970bae11bd374cf114ac3924a27bcae9ee7"
macos-x86_64-charon-driver = "03e6617fe122f29111bf16538a5ba8f0beac6698ce473d99069439d30fa552e8"

[[test]]
name = "integration"
harness = false
